welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value If
If (CouleurSol = Color.green) {avance()}
^